Fix loi, them cac endpoint phan trang role, permission